Modificaacion de sockets para Flutter 25/01/2022 11:31 AM

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,15 @@
             console.log('Conexón perdida');
         });
 
-        socket.emit('mensaje',{ nombre: 'Jhosel'});
+        //socket.emit('mensaje',{ nombre: 'Jhosel'});
 
-        socket.on('mensaje', function(payload){
-            console.log('Escuchando: ', payload);
+        //socket.on('nuevo-mensaje', function(payload){
+          //console.log('Escuchando: ', payload);
+        //})
+
+        socket.on('active-bands', function(bands){
+            console.clear;
+            console.table(bands);
         })
 
     </script>
